Main student page

--- a/OneWeek/Views/Shared/_Layout.cshtml
+++ b/OneWeek/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year</p>
+            <p>&copy; @DateTime.Now.Year - Nicky Marino</p>
         </footer>
     </div>
 
