--- a/OneWeek/Views/Home/Index.cshtml
+++ b/OneWeek/Views/Home/Index.cshtml
@@ -2,8 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>CCO Appointment System</h1>
-    <br />
-    <p class="lead">Welcome! Please press "Login" in the top right to begin.</p>
+<div class="container">
+
+    <form class="form-signin col-lg-4 col-lg-offset-4">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <br />
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
 </div>
